@@ -1,4 +1,8 @@
-﻿drkns 26.03.2016 21:56:52 +0200 - build 4604
+﻿drkns 26.03.2016 23:33:54 +0200 - build 4605
+
+1. Уточнение 4603.
+
+drkns 26.03.2016 21:56:52 +0200 - build 4604
 
 1. Подавляем запросы прав при раскраске.
 
